--- a/vignettes/OrthogroupSyntenies.Rmd
+++ b/vignettes/OrthogroupSyntenies.Rmd
@@ -22,6 +22,7 @@ different objects are prepared.
 
 ```{r load_packages_and_data}
 library('OikScrambling')   |> suppressPackageStartupMessages()
+library('patchwork')       |> suppressPackageStartupMessages()
 genomes <- OikScrambling:::loadAllGenomes(compat = F)
 transcripts <- OikScrambling:::loadAllTranscriptsGR(compat = F) |> suppressWarnings()
 load("BreakPoints.Rdata")
@@ -287,6 +288,128 @@ orthoBlocks$Oki_Osa[order(orthoBlocks$Oki_Osa$geneNumber)] |> tail(11)
 hist(orthoBlocks$Oki_Kum$geneNumber)
 table(orthoBlocks$Oki_Kum$geneNumber)
 orthoBlocks$Oki_Kum[order(orthoBlocks$Oki_Kum$geneNumber)] |> tail(11)
+
+```
+
+
+```{r synteny_block_histograms, fig.width=8, fig.height=6, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+# Let's make this more general, sometimes you just want an annotated histogram...
+# Any numeric vector to a summary statistics table
+numeric_vector_to_summary_df <- function(vec, name=NULL, digits=2) {
+  summary_df <- summary(as.numeric(vec)) |> unclass() |>  as.data.frame() |> tibble::rownames_to_column("stat") |> dplyr::rename(value=2)
+  # Replace names with nicer names
+  summary_df$stat <- c("min", "1st_q", "median", "mean", "3rd_q", "max")
+  summary_df$value <- round(summary_df$value, digits=digits)
+  summary_df
+}
+numeric_vector_to_summary_df(orthoBlocks$Oki_Osa$geneNumber)
+
+# Summary statistics to data.frame for use with ggplot
+summary_df_to_geom_data <- function(summary_df, size=c(0.4, 0.2, 0.4, 0.4, 0.2, 0.4), lty=c(1, 3, 1, 1, 3, 1), col=c("#595959", "darkgray", "darkred", "darkred", "darkgray", "#595959")) {
+  summary_df$size <- size
+  summary_df$lty <- lty
+  summary_df$col <- col
+  summary_df$xintercept <- summary_df$value
+  summary_df
+}
+numeric_vector_to_summary_df(orthoBlocks$Oki_Osa$geneNumber) |> summary_df_to_geom_data()
+
+# Plot a histogram with lines and labels of statistics
+gg_stat_hist <- function(df, plot.what=NULL, include_stats=c("median", "max"), size=c(0.5, 0.3, 0.5, 0.4, 0.3, 0.5), lty=c(1, 3, 1, 1, 3, 1), col=c("#595959", "darkgray", "darkred", "darkred", "darkgray", "#595959"), bins=30, include_lines = TRUE, include_text=TRUE, digits=2, ...) {
+  if(!is.null(plot.what)) {
+    # Extract the numeric vector and put it in convenient format
+    numbers <- df[[plot.what]]
+    numbers <- numbers |> as.data.frame() |> dplyr::as_tibble() |> dplyr::rename(value=1)
+    # Get summary statistics
+    numbers_stats <- numeric_vector_to_summary_df(numbers$value, digits = digits)
+    numbers_stats <- summary_df_to_geom_data(numbers_stats, size = size, lty=lty, col=col)
+    # Filter based on what we want to include
+    numbers_stats <- numbers_stats |> dplyr::filter(stat %in% include_stats)
+
+    # Make plot, add elements as needed
+    p <- ggplot(numbers) + aes(x=value, ... ) + geom_histogram(bins=bins)
+    if(include_lines){
+      p <- p + geom_vline(xintercept = numbers_stats$xintercept, lty=numbers_stats$lty, col=numbers_stats$col, size=numbers_stats$size) + xlab(plot.what)
+    }
+    if(include_text) {
+      label_vec <- paste0(numbers_stats$stat, '\n', numbers_stats$value)
+      # Need to expose the Y values of the bins in order to
+      # plot the correctY values for the labels.
+      p_build <- ggplot_build(p)
+      label_y <- 0.75*max(p_build[["data"]][[1]][["count"]])
+      p <- p + annotate(geom = 'label', x=numbers_stats$xintercept, y = label_y, label=label_vec, col=numbers_stats$col)
+    }
+    p
+  }
+}
+# Close
+p1 <- orthoBlocks$Oki_Kum |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Kum: synteny block size distribution")
+p2 <- orthoBlocks$Osa_Aom |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Aom: synteny block size distribution")
+p3 <- orthoBlocks$Bar_Nor |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Bar-Nor: synteny block size distribution")
+# Intermediate
+p4 <- orthoBlocks$Osa_Bar |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Bar: synteny block size distribution")
+p5 <- orthoBlocks$Osa_Nor |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Nor: synteny block size distribution")
+p6 <- orthoBlocks$Bar_Aom |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Bar-Aom: synteny block size distribution")
+# Distant
+p7 <- orthoBlocks$Oki_Osa |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Osa: synteny block size distribution")
+p8 <- orthoBlocks$Oki_Bar |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Bar: synteny block size distribution")
+p9 <- orthoBlocks$Osa_Kum |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Kum: synteny block size distribution")
+
+p1
+p2
+p3
+p4
+p5
+p6
+p7
+p8
+p9
+(p1 + p2 + p3) # Only close
+(p4 + p5 + p6) # Only intermediate
+(p7 + p8 + p9) # Only distant
+(p1 + p2 + p3 + p4 + p5 + p6 + p7 + p8 + p9) # All plots
+(p7 + p4 + p2) # By increasing phylogenetic distance from Osaka
+
+# Just Okinawa plots
+p10 <- orthoBlocks$Oki_Osa |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Osa: synteny block size distribution")
+p11 <- orthoBlocks$Oki_Bar |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Bar: synteny block size distribution")
+p12 <- orthoBlocks$Oki_Aom |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Aom: synteny block size distribution")
+p13 <- orthoBlocks$Oki_Nor |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Nor: synteny block size distribution")
+p14 <- orthoBlocks$Oki_Kum |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Kum: synteny block size distribution")
+
+(p10 + p11 + p12 + p13 + p14)
+```
+
+```{r synteny_block_histograms_2, fig.width=8, fig.height=6, dev=c("svg", "pdf", "png"), fig.ext=c("svg", "pdf", "png")}
+# Transformed on X axis to simplify things.
+# Close
+p1 <- orthoBlocks$Oki_Kum |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Kum: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p2 <- orthoBlocks$Osa_Aom |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Aom: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p3 <- orthoBlocks$Bar_Nor |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Bar-Nor: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+# Intermediate
+p4 <- orthoBlocks$Osa_Bar |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Bar: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p5 <- orthoBlocks$Osa_Nor |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Nor: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p6 <- orthoBlocks$Bar_Aom |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Bar-Aom: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+# Distant
+p7 <- orthoBlocks$Oki_Osa |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Osa: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p8 <- orthoBlocks$Oki_Bar |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Oki-Bar: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+p9 <- orthoBlocks$Osa_Kum |> as.data.frame() |> gg_stat_hist(plot.what="geneNumber", lty=3) + xlab('Number of genes') + ylab('Count') + ggtitle("Osa-Kum: synteny block size distribution") + scale_x_continuous(trans="log10", limits=c(NA, 1000))
+
+
+p1
+p2
+p3
+p4
+p5
+p6
+p7
+p8
+p9
+(p1 + p2 + p3) # Only close
+(p4 + p5 + p6) # Only intermediate
+(p7 + p8 + p9) # Only distant
+(p1 + p2 + p3 + p4 + p5 + p6 + p7 + p8 + p9) # All plots
+(p7 + p4 + p2) # By increasing phylogenetic distance from Osaka
 ```
 
 Gene Order Conservation is smaller in short arms
